[gd_scene load_steps=13 format=3 uid="uid://bgd4is08hm4yv"]

[ext_resource type="Script" uid="uid://dkbllljttt738" path="res://player.gd" id="1_16hic"]
[ext_resource type="Texture2D" uid="uid://c0gntm575ocrj" path="res://Resources/person.png" id="2_fef5v"]
[ext_resource type="AudioStream" uid="uid://b5mni24787o6i" path="res://Sound/pistol.wav" id="3_ft5c5"]
[ext_resource type="AudioStream" uid="uid://d1h3atxwyd1p0" path="res://Sound/pistol-reload.wav" id="4_51cx5"]
[ext_resource type="AudioStream" uid="uid://c6m8ni3m64iqm" path="res://Sound/no_ammo.wav" id="5_by3vp"]
[ext_resource type="AudioStream" uid="uid://ddkilhyif7duj" path="res://Sound/pickup_01.wav" id="6_urp6f"]
[ext_resource type="AudioStream" uid="uid://c1xv3b2t1gfws" path="res://Sound/pickup_medkit_01.wav" id="8_606se"]
[ext_resource type="AudioStream" uid="uid://dyfi40bw8gxqr" path="res://Sound/grass_step_01.wav" id="10_op7ga"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ksh0"]
radius = 39.0

[sub_resource type="Animation" id="Animation_dw050"]
resource_name = "shake"
length = 2.487
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.06666667, 0.18333334, 0.31666666, 0.45, 0.6166667, 0.75, 1.1, 1.4700001, 1.8700001, 2.2000003),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-4, -3), Vector2(-6, 4), Vector2(1, -5), Vector2(-1, 6), Vector2(-6, -3), Vector2(4, 8), Vector2(-2, -1), Vector2(1, 3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0.06666667, 0.18333334, 0.31666666, 0.45, 0.65, 0.87, 1.1666669, 1.536667, 1.8366668, 2.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_b26j0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7ghd"]
_data = {
&"RESET": SubResource("Animation_b26j0"),
&"shake": SubResource("Animation_dw050")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
position = Vector2(1, 0)
script = ExtResource("1_16hic")

[node name="Person" type="Sprite2D" parent="."]
texture = ExtResource("2_fef5v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_7ksh0")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-3, -57)

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ft5c5")
max_polyphony = 128

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_51cx5")
max_polyphony = 128

[node name="EmptySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_by3vp")
max_polyphony = 128

[node name="GrassStep01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_op7ga")
volume_db = -6.0
max_polyphony = 128

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(1, 1.6)
limit_left = 0
limit_top = 0
limit_right = 5000
limit_bottom = 5000
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
&"": SubResource("AnimationLibrary_n7ghd")
}

[node name="WalkDelay" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Pickup01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_urp6f")
pitch_scale = 1.49
max_polyphony = 128

[node name="PickupMedkit01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_606se")
pitch_scale = 1.24
max_polyphony = 128

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_7ksh0")

[node name="GrenadeTarget" type="Marker2D" parent="."]
position = Vector2(-1, -76)

[connection signal="timeout" from="WalkDelay" to="." method="_on_walkdelay_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
